# stonks

./: .gitignore  COMMERCIAL_LICENSE.md  LICENSE  README.md  api_server.py  files_list.txt  main.py  process_all_data.py  pyproject.toml  start_dev.sh  test_api.py  update_and_process_data.py
.cursor/commands/: clean_imports.md  commit.md  format_all.md
.cursor/rules/: polars_best_practices.mdc  project_organization.mdc
backend/: api_server.py  duckdb_scoring.py
data_processing/: backtest_vectorbt.py  build_duckdb_index.py  build_event_labels.py  build_filtered_from_scoring.py  build_macd_cache.py  build_macd_day_features_incremental.py  build_minute_ohlcv_cache.py  build_polygon_cache.py  build_range_expansion_labels.py  build_scoring_index.py  build_technical_features.py  build_training_dataset.py  check_missing.py  clean_non_tradable_tickers.py  evaluate_factors.py  factor_models.py  join_macd_with_volitility_dataset.py  performance_analysis.py  process_all_data.py  train_ml_model.py  update_and_process_data.py
documentation/: README.md
documentation/getting-started/: 01-quick-start.md  02-data-pipeline.md  03-frontend-guide.md
documentation/reference/: cli-commands.md  scoring-criteria.md
documentation/strategy-guide/: 01-swing-trading-philosophy.md  02-stock-selection-criteria.md  03-risk-management.md
documentation/tier1-features/: 01-feature-engineering.md  (+5 more)
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
tests/: test_api.py  test_factor_models.py
utils/: forward_looking.py  ticker_filter.py  tradingview_links.py
(+18 files in other folders)
