[project]
name = "stonks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "CC-BY-NC-4.0"}
dependencies = [
    "argparse>=1.4.0",
    "pathlib>=1.0.1",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.12",
    "boto3>=1.35.0",
    "python-dotenv>=1.0.0",
]
