[project]
name = "stonks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "CC-BY-NC-4.0"}
dependencies = [
    "argparse>=1.4.0",
    "pathlib>=1.0.1",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.12",
    "boto3>=1.35.0",
    "python-dotenv>=1.0.0",
    "pypdf>=6.6.0",
    # ML & Technical Analysis
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    "lightgbm>=4.0.0",
    "shap>=0.43.0",
    # Backtesting & Performance
    "vectorbt>=0.26.0",
    "alphalens-reloaded>=0.4.3",
    "pyfolio-reloaded>=0.9.5",
    # Visualization
    "plotly>=5.18.0",
    "matplotlib>=3.8.0",
    # Data Sources
    "pandas-datareader>=0.10.0",
    "yfinance>=0.2.0",
    "duckdb>=1.4.3",
]
